--- a/views/help.ejs
+++ b/views/help.ejs
@@ -7,25 +7,75 @@
             </form>
         </div>
         <div class="row margin-auto">
-            <div class="col">
-                <div class="card p-4 shadow">
-                    <img src="" alt="" class="">
-                    <h3 class="">Title</h3>
-                    <a href="" class="list-item link">Go somewhere</a>
+            <div class="row">
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card p-4 shadow">
-                    <img src="" alt="" class="">
-                    <h3 class="">Title</h3>
-                    <a href="" class="list-item link">Go somewhere</a>
+
+            <div class="row">
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card p-4 shadow">
-                    <img src="" alt="" class="">
-                    <h3 class="">Title</h3>
-                    <a href="" class="list-item link">Go somewhere</a>
+
+            <div class="row">
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-4 shadow">
+                        <img src="" alt="" class="">
+                        <h3 class="">Title</h3>
+                        <a href="" class="list-item link">Go somewhere</a>
+                    </div>
                 </div>
             </div>
         </div>
