--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -41,7 +41,7 @@
                 <li id="" class="nav-item active"><a id="" class="nav-link" href="/contact">Contact</a></li>
             </ul>
             
-            <a class="px-4" href="/signin"><i class="fa fa-user text-light fs-3" aria-hidden="true"></i></a>
+            <a class="px-4" href="/profile"><i class="fa fa-user text-light fs-3" aria-hidden="true"></i></a>
                 
             <a class="" href="/cart">
                 <i class="fa fa-shopping-cart text-light fs-3" aria-hidden="true"></i>
