Added location and review pages.

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -13,7 +13,7 @@
     </div>
     <!--Location Ending-->
     <script defer type="text/javascript" src="./private/Javascript/location.js"></script>
-    <script defer type="text/javascript" src="./private/Javascript/map.js"></script>
+    <script defer type="text/javascript" src="./public/map.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js'></script>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoiZGV2LXJwaSIsImEiOiJja2M0d2dsM24wYnZmMnFwajMxdDRmbnZ0In0.3ETfqbTn02vyIX3SNR_fNQ';
