--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -2,9 +2,13 @@
     <div class="container">
         <div class="row">
             <h1 class="text-success m-4">Reviews</h1>
+            <div class="col">
+                <a href="/add-review" class="btn-primary p-3 rounded text-decoration-none">Add Review</a>
+            </div>
         </div>
         <div class="row">
             
         </div>
     </div>
+<%- include ('partials/pagination.ejs') %> 
 <%- include ('partials/footer.ejs') %>  
