--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -128,3 +128,8 @@ textarea {
 #geocoder {
 
 }
+#location-bg {
+    width: 100vw;
+    background-image: url('https://images.pexels.com/photos/4551619/pexels-photo-4551619.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+    background-repeat: no-repeat;
+}
