--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -36,7 +36,7 @@
             <ul id="links" class="navbar-nav">
                 <li id="" class="nav-item active"><a id="" class="nav-link" href="/about">About</a></li>
                 <li id="" class="nav-item active"><a id="" class="nav-link" href="/food-menu">Menu</a></li>
-                <li id="" class="nav-item active"><a id="" class="nav-link" href="/location">Location</a></li>
+                <li id="" class="nav-item active"><a id="" class="nav-link" href="/find-location">Location</a></li>
                 <li id="" class="nav-item active"><a id="" class="nav-link" href="/reviews">Reviews</a></li>
                 <li id="" class="nav-item active"><a id="" class="nav-link" href="/contact">Contact</a></li>
             </ul>
