Fixed food card images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <p class="lead mb-4 text-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt quas magni corrupti, cumque adipisci quo eos provident assumenda dolor aperiam doloremque quasi excepturi in minima, eius qui mollitia dicta quam.
                 Soluta.</p>
             <a id="hero-btn" class="btn btn-success w-25 p-3 rounded" href="/food-menu">Place Order</a>
-            <a id="hero-btn" class="btn btn-primary w-25 p-3 rounded" href="/location">Get Directions</a>
+            <a id="hero-btn" class="btn btn-primary w-25 p-3 rounded" href="/find-location">Get Directions</a>
         </class=>
 
     </div>
