--- a/views/foodmenu.ejs
+++ b/views/foodmenu.ejs
@@ -2,12 +2,18 @@
 
         <!--Menu Beginning-->
         <div class="container m-auto">
-            <h1 id="menu-heading" class="text-center text-success m-4 mt-5">Menu</h1>
             <!-- Searchbar -->
-            <div class="search-bar m-4 col-sm-11 text-center">
+            <div class="search-bar m-4 col-sm-12 text-center">
+                <h1 id="menu-heading" class="text-center text-success m-4 mt-5">Menu</h1>
                 <form class="input-group" action="/search" method="POST">
-                    <input id="menu-input" class="form-control" type="search" name="searchBar" id="" placeholder="Search for food..." required>
-                    <input id="menu-search" class="form-control btn-primary text-center" type="submit" value="Search">
+                    <input id="menu-input" class="form-control w-50" type="search" name="searchBar" id="" placeholder="Search for food..." required>
+                    <select name="filter" id="" class="form-select w-25">
+                        <option value="Filter" selected>Filter</option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                    </select>
+                    <button id="menu-search" class="form-control btn-primary text-center w-25" type="submit">Search</button>
                 </form>
             </div>
             <!-- Menu Items -->
