Added database support and fixed icons

--- a/views/findLocation.ejs
+++ b/views/findLocation.ejs
@@ -1,5 +1,5 @@
 <%- include ('partials/navbar.ejs') %>
-    <div id="location-bg" class="container p-2">
+    <div id="location-bg" class="container-fluid p-2">
         <div class="col m-5">
             <h1 class="mb-4">Find a Tastebuds Location</h1>
             <form action="/location" method="POST" class="mb-3 input-group-append rounded">
