--- a/views/help.ejs
+++ b/views/help.ejs
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row gy-3">
                 <div class="col">
                     <div class="card p-4 shadow">
                         <img src="" alt="" class="">
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row gy-3">
                 <div class="col">
                     <div class="card p-4 shadow">
                         <img src="" alt="" class="">
