--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--Footer Beginning-->
-<footer class="p-5 bg-primary">
+<footer class="p-5 bg-primary fixed-bottom">
     <div id="info" class="container-fluid mb-4">
         <div class="row">
             <div class="col-sm-3">
