--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,8 +18,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@500&display=swap" rel="stylesheet">
 
         <!--Fontawesome Icon CDN-->
-        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        
         <!--Favicon Icon-->
         <link rel="icon" type="image" href="https://img.icons8.com/cotton/2x/blowjob--v2.png">
 
