--- a/views/location.ejs
+++ b/views/location.ejs
@@ -4,7 +4,7 @@
     <div id="location" class="container-fluid p-5">
         <h1 id="" class="text-success">Location</h1>
         <p id="" class="text-center text-primary"> We are located on the corner of SW 151 St & Broadway Blvd</p>
-        <div class="container">
+        <div class="container-fluid">
 
             <div id="map" style="width: 950px; height: 620px;" class=""></div>
             <div id="geocoder" class="geocoder"></div>
