Added sample reviews, fixed menu, fixed contact form and fixed profile page.

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -2,8 +2,8 @@
     <div class="container m-auto">
         <div class="row shadow rounded p-3">
             <img src="" alt="" class="">
-            <h1 class="text-center">Thank You!</h1>
-            <p class="">Your order was successfully placed. You will receive an email regarding your order confirmation shortly.</p>
+            <h1 class="text-center">Submission successful. Thank You!</h1>
+            <p class=" p-3"><%= msg %></p>
             <a href="/" class="btn btn-primary rounded p-3">Home</a>
         </div>
     </div>
