--- a/views/foodmenu.ejs
+++ b/views/foodmenu.ejs
@@ -9,9 +9,9 @@
                     <input id="menu-input" class="form-control w-50" type="search" name="searchBar" id="" placeholder="Search for food..." required>
                     <select name="filter" id="" class="form-select w-25">
                         <option value="Filter" selected>Filter</option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option value="Vegan">Vegan</option>
+                        <option value="Salads">Salads</option>
+                        <option value="Bowls">Bowls</option>
                     </select>
                     <button id="menu-search" class="form-control btn-primary text-center w-25" type="submit">Search</button>
                 </form>
