--- a/views/partials/food.ejs
+++ b/views/partials/food.ejs
@@ -4,14 +4,14 @@
             <div class="card m-auto rounded shadow">
                 <img src="https://images.pexels.com/photos/704569/pexels-photo-704569.jpeg?auto=compress&cs=tinysrgb&dpr=1" height="" width="100%" alt="item" class="card-img-top p-2 text-center rounded">
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title text-left"><%DISH_NAME%>Dish</h1>
+                    <h1 class="card-title pricing-card-title text-left">Dish</h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li class="text-left"><%DISH_DESCRIPTION%>Some quick example text to build on the card title and make up the bulk of the card's content.</li>
+                        <li class="text-left">Some quick example text to build on the card title and make up the bulk of the card's content.</li>
                         <li class="text-left">
                             <p class="fs-3">$0.00</p>
                         </li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-primary rounded">Place Order</button>
+                    <button type="button" class="w-100 btn btn-primary rounded">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                             <p class="fs-3">$0.00</p>
                         </li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-primary rounded">Place Order</button>
+                    <button type="button" class="w-100 btn btn-primary rounded">Add to Cart</button>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                             <p class="fs-3">$0.00</p>
                         </li>
                     </ul>
-                    <button type="button" class="w-100 btn btn-primary rounded">Place Order</button>
+                    <button type="button" class="w-100 btn btn-primary rounded">Add to Cart</button>
                 </div>
             </div>
         </div>
