--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,30 +1,30 @@
 <%- include ('partials/navbar.ejs') %>
-    <div class="container p-3 m-4">
+    <div class="container-fluid p-3 m-4">
         <div class="row">
             <div class="col">
-                <img src="https://images.pexels.com/photos/6801642/pexels-photo-6801642.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="350px" width="400px" alt="Profile picture" class="row rounded-circle mb-3">
+                <img src="https://images.pexels.com/photos/6801642/pexels-photo-6801642.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"  alt="Profile picture" class="row rounded-circle mb-3">
                 <a href="" class="link">Change Profile Picture</a>
             </div>
             <div class="col text-left">
                 <h1 class="mb-4">Profile Name</h1>
                 <ul class="">
-                    <li class="list-item">
+                    <li class="list-item profile-list">
                         <label class="">Bithday:</label>
                         <p class="ps-4">January 26, 1984</p>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item profile-list">
                         <label class="">Gender:</label>
                         <p class="ps-4">M</p>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item profile-list">
                         <label class="">Address:</label>
                         <p class="ps-4">31 Spooner St, Quahog, Rhode Island 54286</p>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item profile-list">
                         <label class="">Phone:</label>
                         <p class="ps-4">9546608423</p>
                     </li>
-                    <li class="list-item">
+                    <li class="list-item profile-list">
                         <label class="">Plan:</label>
                         <p class="ps-4">Basic</p>
                     </li>
