--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -133,3 +133,6 @@ textarea {
     background-image: url('https://images.pexels.com/photos/4551619/pexels-photo-4551619.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
     background-repeat: no-repeat;
 }
+.profile-list {
+    list-style: none;
+}
