--- a/views/addReview.ejs
+++ b/views/addReview.ejs
@@ -1,22 +1,32 @@
 <%- include ('partials/navbar.ejs') %>
-    <div class="container">
-        <div class="row m-4">
-            <h1 class="">Write a Review</h1>
-            <form action="/post-review" method="POST" class="">
-                <div class="col">
-                    <button class="btn-outline-success"></button>
-                    <button class="btn-outline-success"></button>
-                    <button class="btn-outline-success"></button>
-                    <button class="btn-outline-success"></button>
-                    <button class="btn-outline-success"></button>
+    <div class="container m-5">
+        <div class="row">
+            <h1 class="">Leave a Review!</h1>
+            <p class="">Get started writing below.</p>
+            <form action="/review" method="POST" class="d-grid gap-3">
+                
+                <div class="row">
+                    <div class="col">
+                        <button class="btn-outline-dark">*</button>
+                        <button class="btn-outline-dark">*</button>
+                        <button class="btn-outline-dark">*</button>
+                        <button class="btn-outline-dark">*</button>
+                        <button class="btn-outline-dark">*</button>
+                    </div>
                 </div>
-                <div class="">
-                    <label for="review-img">Upload review image</label>
-                    <input name="review-img" type="file" class="rounded">
+                <div class="row">
+                    <label class="float-end" for="review-img">Upload review image</label>
+                    <input name="review-img" type="file" class="rounded border border-dark p-3">
                 </div>
-                <input name="review-title" type="text" class="p-3 rounded" placeholder="Title" required>
-                <textarea name="review" id="" cols="30" rows="10" class="p-3 rounded" placeholder="Write your review here" required></textarea>
-                <button class="btn-primary rounded">Post Review</button>
+                <div class="row">
+                    <input name="review-title" type="text" class="p-3 rounded" placeholder="Title" required>
+                </div>
+                <div class="row">
+                    <textarea name="review" id="" cols="30" rows="10" class="p-3 rounded" placeholder="Write your review here" required></textarea>
+                </div>
+                <div class="row">
+                    <button class="btn btn-block btn-primary rounded">Post Review</button>
+                </div>
             </form>
         </div>
     </div>
