--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -1,13 +1,16 @@
 <%- include ('partials/navbar.ejs') %>
-    <div class="container">
+    <div class="container d-grid gap-4">
         <div class="row">
-            <h1 class="text-success m-4">Reviews</h1>
+            <h1 class="text-success mt-4">Reviews</h1>
+            <p class="">See what our customer think!</p>
             <div class="col">
-                <a href="/add-review" class="btn-primary p-3 rounded text-decoration-none">Add Review</a>
+                <a href="/review" class="btn-primary p-3 rounded text-decoration-none float-end">Add Review</a>
             </div>
         </div>
-        <div class="row">
-            
+        <div class="row d-grid gap-4">
+            <%- include ('partials/testimonial.ejs')%>
+            <%- include ('partials/testimonial.ejs')%>
+
         </div>
     </div>
 <%- include ('partials/pagination.ejs') %> 
