--- a/views/foodmenu.ejs
+++ b/views/foodmenu.ejs
@@ -5,7 +5,7 @@
             <!-- Searchbar -->
             <div class="search-bar m-4 col-sm-12 text-center">
                 <h1 id="menu-heading" class="text-center text-success m-4 mt-5">Menu</h1>
-                <form class="input-group" action="/search" method="POST">
+                <form class="input-group" action="/food-menu" method="POST">
                     <input id="menu-input" class="form-control w-50" type="search" name="searchBar" id="" placeholder="Search for food..." required>
                     <select name="filter" id="" class="form-select w-25">
                         <option value="Filter" selected>Filter</option>
