--- a/views/help.ejs
+++ b/views/help.ejs
@@ -2,7 +2,7 @@
     <div class="container p-3 m-auto">
         <div class="row mb-3">
             <h1 class="text-success mb-4">Hi! How can we help?</h1>
-            <form action="/questions" method="POST" class="input-group">
+            <form action="/help" method="POST" class="input-group">
                 <input name="query" type="search" class="form-control search rounded shadow p-3 mb-3" placeholder="Search answers" required>
             </form>
         </div>
