--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
                             <h1 class="text-success text-center">Tastebuds Signup</h1>
                             <p class="text-center">Fill out the registration form to create an account.</p>
                         </div>
-                        <form class="form-signin" action="/register" method="POST" autocomplete="on" autocapitalize="on">
+                        <form class="form-signin" action="/signup" method="POST" autocomplete="on" autocapitalize="on">
                             <div class="input-group mb-3">
                                 <i id="user" class="fa fa-user input-group-text"></i>
                                 <input class="form-control rounded" name="userName" type="text" placeholder="Username..." title="Please enter a valid Username." required>
